--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A Probot app",
   "author": "Veronica Giaudrone <veronicagg@users.noreply.github.com> (https://github.com/veronicagg/openapi-portal-comment)",
-  "license": "ISC",
+  "license": "MIT",
   "repository": "https://github.com//openapi-portal-comment.git",
   "homepage": "https://github.com//openapi-portal-comment",
   "bugs": "https://github.com//openapi-portal-comment/issues",
@@ -13,29 +13,37 @@
     "probot-app"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "nodemon --exec \"npm start --debug\"",
-    "start": "probot run ./lib/index.js",
-    "lint": "standard **/*.ts --fix",
-    "test": "jest && standard **/*.ts",
+    "build": "tsc",
+    "dev": "nodemon --ext ts,js --exec \"npm start\"",
+    "start": "node server.js",
+    "lint": "tslint --project .",
+    "fmt": "prettier --write src/**/* && tslint --project . --fix",
+    "test": "tsc --noEmit -p . && jest --coverage && npm run lint",
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "nock": "^10.0.0",
-    "@types/nock": "^9.3.0",
-    "probot": "^7.2.0"
+    "@octokit/rest": "^15.6.0",
+    "@types/bunyan": "^1.8.4",
+    "@types/node": "^10.5.1",
+    "@types/request": "^2.47.1",
+    "@types/request-promise-native": "^1.0.15",
+    "github-webhook-event-types": "^1.1.0",
+    "jsonlint": "^1.6.3",
+    "probot": "^7.0.0",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5",
+    "ts-node": "^7.0.0",
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.5",
-    "@types/node": "^10.5.2",
-    "eslint-plugin-typescript": "^0.12.0",
-    "jest": "^23.4.0",
+    "jest": "^23.2.0",
     "nodemon": "^1.17.2",
+    "prettier": "^1.13.7",
     "smee-client": "^1.0.2",
-    "standard": "^10.0.3",
     "ts-jest": "^23.0.0",
-    "typescript": "^2.9.2",
-    "typescript-eslint-parser": "^18.0.0"
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.13.0",
+    "tslint-config-standard": "^7.1.0"
   },
   "engines": {
     "node": ">= 8.3.0"
